--- a/PostcardProject/src/main/resources/templates/login.html
+++ b/PostcardProject/src/main/resources/templates/login.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="login.css" >
+    <style>
+        body {background-color: #1B213E}
+    </style>
     <script type="text/javascript">
         var speed=30, leaves=10, body;
         var dx=[], xp=[], yp=[], am=[], dy=[], le=[];
