--- a/PostcardProject/src/main/resources/templates/login.css
+++ b/PostcardProject/src/main/resources/templates/login.css
@@ -1,8 +1,14 @@
-.body{
-    background-color: #1B213E;
-}
-
 .loginform{
     display: flex;
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    position: absolute;
+    overflow: hidden;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
 }
