--- a/PostcardProject/src/main/resources/templates/login.html
+++ b/PostcardProject/src/main/resources/templates/login.html
@@ -4,7 +4,58 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <style>
-        body {background-color: #1B213E}
+        body {
+            background-color: #1B213E;
+        }
+
+        .loginform{
+            display: flex;
+            font-family: 'Ubuntu', sans-serif;
+            color: #FFFFFF;
+            font-style: normal;
+            position: absolute;
+            overflow: hidden;
+            height: 100vh;
+            width: 100%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            text-align: center;
+        }
+        .loginform input[type=text]{
+            width: 300px;
+            border: 0;
+            border-radius: 10px;
+            background-color: #FFFFFF;
+            font-family: 'Ubuntu', sans-serif;
+            font-style: normal;
+            font-size: 10pt;
+            height: 35px;
+        }
+        .loginform input[type=password]{
+            width: 300px;
+            border: 0;
+            border-radius: 10px;
+            background-color: #FFFFFF;
+            font-family: 'Ubuntu', sans-serif;
+            font-style: normal;
+            font-size: 10pt;
+            height: 35px;
+        }
+
+        .loginform input[type=submit]{
+            background-color: #F5C832;
+            border: 0;
+            font-family: 'Ubuntu', sans-serif;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 10pt;
+            border-radius: 10px;
+            padding: 10px 0 10px 0;
+            position: absolute;
+            width: 100px;
+        }
     </style>
     <script type="text/javascript">
         var speed=30, leaves=10, body;
@@ -47,7 +98,7 @@
             var f, size;
             size = fallStart(count, whyp);
             f = document.createElement("img");
-            f.src = "../images/snowflake.png";
+            f.src = "snowflake.png";
             f.width = size;
             f.style.position = "absolute";
             f.style.top = yp[count]+"px";
@@ -98,12 +149,12 @@
 </head>
 <body>
 <div class="loginform">
-<h1>It's tiiiiiime to login!</h1>
-<form action="#" th:action="@{/}" th:object="${loginForm}" method="post">ű
-    Username: <input type="text" th:field="*{username}"/></br>
-    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error!</span>
-    Password: <input type="password" th:field="*{password}"/></br>
-    <span th:if="${#fields.hasErrors('username')}" th:errors="*{password}">Password Error!</span></br>
+<h1>It's time to sign in!</h1></br></br></br>
+<form action="#" th:action="@{/}" th:object="${loginForm}" method="post">
+    <input type="text" placeholder="Username" th:field="*{username}"/></br></br>
+    <!--<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error!</span>-->
+    <input type="password" placeholder="Password" th:field="*{password}"/></br></br></br>
+    <!--<span th:if="${#fields.hasErrors('username')}" th:errors="*{password}">Password Error!</span></br>-->
     <input type="submit" value="LOGIN">
 </form>
 </div>
