--- a/PostcardProject/src/main/resources/templates/login.html
+++ b/PostcardProject/src/main/resources/templates/login.html
@@ -151,10 +151,10 @@
 <div class="loginform">
 <h1>It's time to sign in!</h1></br></br></br>
 <form action="#" th:action="@{/}" th:object="${loginForm}" method="post">
-    <input type="text" placeholder="Username" th:field="*{username}"/></br></br>
-    <!--<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error!</span>-->
-    <input type="password" placeholder="Password" th:field="*{password}"/></br></br></br>
-    <!--<span th:if="${#fields.hasErrors('username')}" th:errors="*{password}">Password Error!</span></br>-->
+    <input type="text" placeholder="Username" th:field="*{username}"/></br>
+    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error!</span></br></br>
+    <input type="password" placeholder="Password" th:field="*{password}"/></br>
+    <span th:if="${#fields.hasErrors('username')}" th:errors="*{password}">Password Error!</span></br></br>
     <input type="submit" value="LOGIN">
 </form>
 </div>
