login and registration format

--- a/PostcardProject/src/main/resources/templates/login.html
+++ b/PostcardProject/src/main/resources/templates/login.html
@@ -7,7 +7,10 @@
         body {
             background-color: #1B213E;
         }
+        a {
+            color: #F5C832;
 
+        }
         .loginform{
             display: flex;
             font-family: 'Ubuntu', sans-serif;
@@ -148,15 +151,16 @@
     </script>
 </head>
 <body>
-<div class="loginform">
-<h1>It's time to sign in!</h1></br></br></br>
-<form action="#" th:action="@{/}" th:object="${loginForm}" method="post">
-    <input type="text" placeholder="Username" th:field="*{username}"/></br>
-    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error!</span></br></br>
-    <input type="password" placeholder="Password" th:field="*{password}"/></br>
-    <span th:if="${#fields.hasErrors('username')}" th:errors="*{password}">Password Error!</span></br></br>
-    <input type="submit" value="LOGIN">
-</form>
-</div>
+    <div class="loginform">
+        <h1>It's time to sign in!</h1></br></br></br>
+        <form action="#" th:action="@{/login}" th:object="${loginForm}" method="post">
+            <input type="text" placeholder="Username" th:field="*{username}" required></br>
+            <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error!</span></br></br>
+            <input type="password" placeholder="Password" th:field="*{password}" required/></br>
+            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error!</span></br></br>
+            <input type="submit" value="LOGIN">
+        </form></br></br></br>
+        <p>If not a member, <a href="/register">register here</a>!</p>
+    </div>
 </body>
 </html>
