--- a/PostcardProject/src/main/resources/templates/postcard.html
+++ b/PostcardProject/src/main/resources/templates/postcard.html
@@ -134,7 +134,7 @@
     </div>
 
     <div class="header-right">
-        <button class="logout-button" onclick="/logout">Logout</button>
+        <button class="logout-button" onclick="location.href='/logout'">Logout</button>
     </div>
 </div>
 <div class="body">
