--- a/PostcardProject/src/main/resources/templates/main.html
+++ b/PostcardProject/src/main/resources/templates/main.html
@@ -73,7 +73,7 @@
     <div class="header">
         <div class="header-left">
             <img src="claus.png" alt="Profile Picture" class="profile-pic">
-            <span>User Name</span>
+            <span th:text="${username}">User Name</span>
         </div>
 
         <div class="header-center">
@@ -82,7 +82,7 @@
         </div>
 
         <div class="header-right">
-            <button class="logout-button" onclick="/logout">Logout</button>
+            <button class="logout-button" onclick="location.href='/logout'">Logout</button>
         </div>
     </div>
 </body>
