--- a/PostcardProject/src/main/resources/templates/postcard.html
+++ b/PostcardProject/src/main/resources/templates/postcard.html
@@ -129,7 +129,7 @@
     </div>
 
     <div class="header-center">
-        <a href="/main">Gallery</a>
+        <a href="/gallery">Gallery</a>
         <a href="/postcard">Postcard</a>
     </div>
 
