--- a/PostcardProject/src/main/resources/templates/main.html
+++ b/PostcardProject/src/main/resources/templates/main.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="header-center">
-            <a href="/main">Gallery</a>
+            <a href="/main">Own Gallery</a>
             <a href="/postcard">Postcard</a>
         </div>
 
